# SurveyVisualiser

./: .gitignore  ColorSetTest.py  ColorSetTest2.py  Makefile  README.md  SNCTest.py  examples.py  make.bat  pyproject.toml  requirements.txt
surveyvis/: camera.py  surveys.py  visualiser.py
surveyvis/data/: 2df.npy  6df.npy
